# Flight_tower

./: .gitignore  .vercel.json  .vercelignore  Application Plan_ Flight Tower — Next.js (Frontend.md  Project Plan_ Python Application for Displaying Ai.md  README.md  app.py  extract_country.py  flight_data (1).json  pyproject.toml  translations.py
api/: .vercel.json  index.py  main.py  pyproject.toml
api/backend/api/: flights.py
api/backend/utils/: cache.py
backend/: .vercel.json  main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: flights.py  geo.py  health.py
backend/app/services/: flightradar.py
backend/app/utils/: geo.py
backend/services/: flightradar.py
backend/src/services/: flightradar.py
flight-tower/: .vercel.json  files  multi  next.config.mjs  package-lock.json  package.json
flight-tower/.next/: app-build-manifest.json  react-loadable-manifest.json  trace
flight-tower/.next/cache/: .rscinfo
flight-tower/.next/server/: app-paths-manifest.json  middleware-react-loadable-manifest.js  server-reference-manifest.json  webpack-runtime.js
flight-tower/.next/server/app/: page.js  page_client-reference-manifest.js
flight-tower/.next/server/vendor-chunks/: @radix-ui.js  @swc.js  aria-hidden.js  class-variance-authority.js  clsx.js  (+14 more)
flight-tower/api/: requirements.txt
flight-tower/api/backend/: pyproject.toml
flight-tower/app/: layout.tsx  page.tsx
flight-tower/components/ui/: card.tsx  dialog.tsx  scroll-area.tsx
flight-tower/features/flights/: types.ts
flight-tower/i18n/: README.md  en.json  pl.json
(+45 files in other folders)
