[project]
name = "flight-tower"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "flightradarapi>=1.4.0",
    "geopy>=2.4.1",
    "requests>=2.31.0",
    "geocoder>=1.38.1",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
]
